-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.355 2008-11-28 23:29:11 guru Exp $
-----------------------------------------------------------------------------------------
2008-11-28	pwessel
	* gmt_init.c:		Now, -R may take the name of an existing grid file. Then,
				the grid domain is used to set -R as well as the grid
				increment for those program that has such an option.
2008-11-21	pwessel
	* spotter/backtracker.c:	The -W option always assumed the reverse rotation
				(from hotspot to seamount).  Now obeys the -D option.
				
2008-11-17	pwessel
	* psscale.c:		When -I and -Li was used we did not draw box outlines.
	* ps2raster.c:		New format -Tb for MicroSoft BMP output.  Also, formats
				b, g, j, and t accept modifier '-' to produce grayscale
				images.  Finally, added -Cgs-command to add one or more
				custom switches to ghostscript, and -Q[g|t]<bits> to
				set the level of anti-aliasing for graphics and text.
2008-11-14	pwessel
	* ps2raster.c:		New format -TG turns on transparency for PNG output.
	
2008-11-13	pwessel
	* psxy[z].c:		New option -I<intens> to modulate fill color via illumination.

2008-11-02	pwessel
	* spotter/backtracker.c:	New option -e to specify a single fixed total
				reconstruction rotation to apply to all input points.
				
2008-10-17	pwessel
	* xyz2grd.c:		New format (A) for -Z which allows more than one floating
				point value per input record.  Cannot be used if the z-
				values are in dateTclock or ddd:mm:ss format.
2008-10-14	pwessel
	* xgrid/xGridEdit.c:	Needs GMT_io_init to get all pieces needed to read grids.

2008-10-10	pwessel
	* x2sys.c:		Can now also handle netCDF 1-D COARDS files.
	* psbasemap.c		The -L syntax and description was out of date regarding
				how the options are to be specified.  Added new syntax
				explain functions for both map scale and map rose so these
				are consistently described for both psbasemap and pscoast.